fix progress stepper spacing for v2/v3

--- a/packages/components/src/__layout__/Workflow/v2/subcomponents/Footer/components/ProgressStepper/ProgressStepper.module.scss
+++ b/packages/components/src/__layout__/Workflow/v2/subcomponents/Footer/components/ProgressStepper/ProgressStepper.module.scss
@@ -87,9 +87,15 @@ $indicator-size: 1.25rem;
 .stepperDescription {
   display: flex;
   justify-content: center;
+  color: var(--color-white);
+  font-family: var(--typography-paragraph-small-font-family);
+  font-weight: var(--typography-paragraph-small-font-weight);
+  font-size: var(--typography-paragraph-small-font-size);
+  line-height: var(--typography-paragraph-small-line-height);
+  letter-spacing: var(--typography-paragraph-small-letter-spacing);
 
-  @media (min-width: 768px) {
-    // sr hidden styles
+  @media (width >= 768px) {
+    /* sr hidden styles */
     position: absolute;
     width: 0;
     height: 0;
